#9497 - Export informací o fondech do CSV
